master is called main branch

--- a/.github/workflows/build-rulebook.yml
+++ b/.github/workflows/build-rulebook.yml
@@ -3,10 +3,10 @@ name: Compile and Export MLR Rulebook
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
