--- a/.github/workflows/build-rulebook.yml
+++ b/.github/workflows/build-rulebook.yml
@@ -18,11 +18,14 @@ jobs:
 
     - name: Compile Rulebook
       run: |
+        #Create artifact directory
         mkdir -p ${{ github.workspace }}/artifact
+        
+        #Build rulebook
         cd rulebook
         latexmk -pdf rulebook.tex
+        #Move built rulebook to artifact directory
         mv rulebook.pdf ${{ github.workspace }}/artifact/rulebook.pdf
-        ls ${{ github.workspace }}/artifact
   
     - name: Save Rulebook.pdf Artifact
       uses: actions/upload-artifact@v2
